--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
-    "watch": "nodemon server.js"
+    "watch": "nodemon -r dotenv/config server.js"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "apollo": "^2.34.0",
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "react": "^18.2.0",
